--- a/app/views/cover_letters/_form.html.haml
+++ b/app/views/cover_letters/_form.html.haml
@@ -8,6 +8,6 @@
 
   .field
     = f.label :body
-    = f.text_area :body
+    = f.text_area :body, :style => "width:98%;"
   .actions
     = f.submit 'Save'
