--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -1,1 +1,27 @@
 .commented-at         { color:grey; font-style:italic; font-size:10px; }
+
+/*.bubble               { background-color: #F6F8DE; border-radius: 8px; padding: 0.5em 2em 0.5em 2em; box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3); }*/
+
+.bubble               { background-color: #F6F8DE; border-radius: 8px; box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3); }
+
+div.bubble p          { padding: 0 40px; }
+
+.bubble:before, .bubble:after {
+  color: grey;
+  display: block;
+  font-size: 4em;
+  width: 30px;
+}
+
+.bubble:before {
+  content: '\201C';
+  height: 0.5em;
+  margin-left: 10px;
+}
+
+.bubble:after {
+  content: '\201D';
+  height: 1em;
+  margin-top: -40px;
+  margin-left: 97%;
+}
